parser/tests/bad/str01.st
% max length of a 'string' must have type 'int'

var str: string(2.0)
